force-app/main/default/objects/Case/fields/Escalated_to_Premier_Support__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Premier_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this field if the Case has been Escalated to Premier Support</description>
    <inlineHelpText>Please check this field if the Case has been Escalated to Premier Support</inlineHelpText>
    <label>Escalated to Premier Support</label>
    <type>Checkbox</type>
</CustomField>