force-app/main/default/objects/Case/fields/Escalated_to_Premier_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Premier_Support_Date__c</fullName>
    <description>The Date that this Case was escalated</description>
    <inlineHelpText>The Date that this Case was escalated</inlineHelpText>
    <label>Escalated to Premier Support Date</label>
    <type>Date</type>
</CustomField>