force-app/main/default/objects/Case/fields/Escalation_Initialized__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags a DRP Case as ready for escalation countdown measures to be initiated</description>
    <label>Escalation Initialized</label>
    <type>Checkbox</type>
</CustomField>