force-app/main/default/objects/Case/fields/Escalation_status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_status__c</fullName>
    <label>Escalation Status (Legacy)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE / RM</fullName>
            </value>
            <value>
                <fullName>Head of Operations, Intl Aware</fullName>
            </value>
            <value>
                <fullName>OPM Aware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>