force-app/main/default/objects/Case/fields/Ever_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Ever_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the case was ever escalated</description>
    <label>Ever Escalated</label>
    <type>Checkbox</type>
</CustomField>