force-app/main/default/objects/Case/fields/First_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Resolution__c</fullName>
    <label>First Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>