force-app/main/default/objects/Case/fields/First_Response_Violation__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is TRUE when a Case violates the First Response Milestone.</description>
    <label>First Response Violation</label>
    <type>Checkbox</type>
</CustomField>