force-app/main/default/objects/Case/fields/FMA_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>FMA_Discrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disagreement with a counterparty regarding the material terms of an OTC derivative contract. Material terms of an OTC derivative include those economic terms that form part of a report to a trade repository incl terms regarding valuation and collateral</inlineHelpText>
    <label>FMA Discrepancy</label>
    <type>Checkbox</type>
</CustomField>