force-app/main/default/objects/Case/fields/FO_AE_advised__c.field-meta.xml
<CustomField>
    <fullName>FO_AE_advised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FO / AE advised</label>
    <type>Checkbox</type>
</CustomField>