force-app/main/default/objects/Case/fields/Gain_Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Gain_Correspondence_Address__c</fullName>
    <defaultValue>$Setup.Environment_Variable__c.GainMarginChangeEMailAddress__c</defaultValue>
    <description>This email field uses a formula to pre-populate the Gain Capital email address from the Custome Settings variable. The field is used as the recipient in a Email Alter that gets send to Gain when a new Margin Change request was submitted.</description>
    <inlineHelpText>This eMail Address was pre-populated from the Custome Settings by a formula.</inlineHelpText>
    <label>Gain Correspondence Address</label>
    <type>Email</type>
</CustomField>