force-app/main/default/objects/Case/fields/hContactId__c.field-meta.xml
<CustomField>
    <fullName>hContactId__c</fullName>
    <description>Contact id to link case to contact</description>
    <label>hContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>