force-app/main/default/objects/Case/fields/ICBC_Case__c.field-meta.xml
<CustomField>
    <fullName>ICBC_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICBC Case</label>
    <type>Checkbox</type>
</CustomField>