force-app/main/default/objects/Case/fields/ICBC_Contact__c.field-meta.xml
<CustomField>
    <fullName>ICBC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICBC Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.ICBC_Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.ICBC_Case__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>