force-app/main/default/objects/Case/fields/Impact_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Impact_Of_Change__c</fullName>
    <label>Impact Of Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Minor - Appearance</fullName>
            </value>
            <value>
                <fullName>2. Minor - Configuration</fullName>
            </value>
            <value>
                <fullName>3. Major - Configuration</fullName>
            </value>
            <value>
                <fullName>4. Major - Business Process</fullName>
            </value>
            <value>
                <fullName>5. Major - Business Process &amp; Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>