force-app/main/default/objects/Case/fields/In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>In_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dispute: Discrepancies that are not resolved within a certain period of time.All discrepancies relating to material terms of OTC derivative transactions that have not been resolved within 3-5 business days will be deemed to be disputes.</inlineHelpText>
    <label>In Dispute</label>
    <type>Checkbox</type>
</CustomField>