force-app/main/default/objects/Case/fields/Incoming_emails__c.field-meta.xml
<CustomField>
    <fullName>Incoming_emails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SGPRT-782  - This field shows the number of incoming emails.</description>
    <inlineHelpText>How many incoming emails are related to this Case?</inlineHelpText>
    <label>Incoming emails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>