force-app/main/default/objects/Case/fields/Key_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Key_Focus_Area__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Key Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Activity</fullName>
            </value>
            <value>
                <fullName>Client Reference Data</fullName>
            </value>
            <value>
                <fullName>Internal Enhancements</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>