force-app/main/default/objects/Case/fields/Key_Focus_Area_Details__c.field-meta.xml
<CustomField>
    <fullName>Key_Focus_Area_Details__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Key Focus Area Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Key_Focus_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Plan</fullName>
            </value>
            <value>
                <fullName>Activity Management</fullName>
            </value>
            <value>
                <fullName>Call Report Management</fullName>
            </value>
            <value>
                <fullName>Client Contacts</fullName>
            </value>
            <value>
                <fullName>Client Focused Information</fullName>
            </value>
            <value>
                <fullName>Client Hierarchy</fullName>
            </value>
            <value>
                <fullName>Client Profitability</fullName>
            </value>
            <value>
                <fullName>Client service teams</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Conflicts Clearing</fullName>
            </value>
            <value>
                <fullName>Content Library</fullName>
            </value>
            <value>
                <fullName>Customized pipeline alerts</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Event Management</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>Forecast Data</fullName>
            </value>
            <value>
                <fullName>Gift Management</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Intelligence from other systems</fullName>
            </value>
            <value>
                <fullName>Intelligent reporting</fullName>
            </value>
            <value>
                <fullName>Liquidity &amp; Capital Management</fullName>
            </value>
            <value>
                <fullName>Objects</fullName>
            </value>
            <value>
                <fullName>Opportunity Sharing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outlook Integration</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Profiles</fullName>
            </value>
            <value>
                <fullName>Related Lists</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>