force-app/main/default/objects/Case/fields/Last_Breach__c.field-meta.xml
<CustomField>
    <fullName>Last_Breach__c</fullName>
    <description>SGPRT-263 - This field will store the last escalation such as First Response, Agent Resolution or Manager Resolution and will be used to show the last escalation on the case AND this field will be used to show escalated Case records in a Escalation list view.</description>
    <inlineHelpText>What was the last escalation on this Case?</inlineHelpText>
    <label>Last Breach</label>
    <length>20</length>
    <type>Text</type>
</CustomField>