force-app/main/default/objects/Case/fields/Last_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Comment__c</fullName>
    <label>Last Case Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>