force-app/main/default/objects/Case/fields/Lessons_Learnt__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learnt__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Lessons Learnt</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>