force-app/main/default/objects/Case/fields/Line_Manager_Email_for_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Email_for_Case_Owner__c</fullName>
    <description>Line Manager&apos;s email for the Case owner (US-1536).</description>
    <inlineHelpText>Line Manager&apos;s email for the Case owner.</inlineHelpText>
    <label>Line Manager&apos;s Email for Case Owner</label>
    <type>Email</type>
</CustomField>