force-app/main/default/objects/Case/fields/line_manager_name_for_case_owner__c.field-meta.xml
<CustomField>
    <fullName>line_manager_name_for_case_owner__c</fullName>
    <description>Fetches the Case record&apos;s line manager&apos;s name if it exists (US-1536).</description>
    <formula>IF(!ISBLANK(Owner:User.Id) &amp;&amp; !ISBLANK(Owner:User.ManagerId), Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName, &quot;&quot;)</formula>
    <inlineHelpText>Fetches the Case record&apos;s line manager&apos;s name if it exists.</inlineHelpText>
    <label>Line Manager&apos;s Name for Case Owner</label>
    <type>Text</type>
</CustomField>