force-app/main/default/objects/Case/fields/Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Mailbox__c</fullName>
    <description>US-3664:To capture email address from email message mainly for case closure process</description>
    <inlineHelpText>To capture client email address</inlineHelpText>
    <label>Mailbox</label>
    <type>Email</type>
</CustomField>