force-app/main/default/objects/Case/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <description>The Primary category by which the case is classified (Kele 2013/12)</description>
    <inlineHelpText>Primary Case Classification</inlineHelpText>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>General Management</fullName>
            </value>
            <value>
                <fullName>Other External</fullName>
            </value>
            <value>
                <fullName>Other Internal</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
                <default>true</default>
                <label>Payments</label>
            </value>
            <value>
                <fullName>Trade Finance</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Client On boarding</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>Internal Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>