force-app/main/default/objects/Case/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SGPRT-424 - This field used to stamp the User&apos;s Manager on the Case record</description>
    <inlineHelpText>Who is the manager of the Current Owner of the record?</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>