force-app/main/default/objects/Case/fields/Manager_Breach__c.field-meta.xml
<CustomField>
    <fullName>Manager_Breach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records which User was the Owner of the Case record when the Manager Resolution milestone was violated.</description>
    <label>Manager Breach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>