force-app/main/default/objects/Case/fields/Manager_Resolution_Violation__c.field-meta.xml
<CustomField>
    <fullName>Manager_Resolution_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is TRUE when the Manager Resolution Milestone was violated.</description>
    <label>Manager Resolution Violation</label>
    <type>Checkbox</type>
</CustomField>