force-app/main/default/objects/Case/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>PIM</fullName>
            </value>
            <value>
                <fullName>TPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>