force-app/main/default/objects/Case/fields/Migration_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Migration_Process_Step__c</fullName>
    <description>This field is created to display the process step of the PBB Migration</description>
    <inlineHelpText>Stage of Migration</inlineHelpText>
    <label>Migration Process Step</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Request Submitted</fullName>
            </value>
            <value>
                <fullName>Logged on Migration Tracking Log</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>PBB Acceptance</fullName>
            </value>
            <value>
                <fullName>Client Migration Forum</fullName>
            </value>
            <value>
                <fullName>PBB Acquisition</fullName>
            </value>
            <value>
                <fullName>System Changes</fullName>
            </value>
            <value>
                <fullName>KYC Legal and Collateral Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>