force-app/main/default/objects/Case/fields/MNC__c.field-meta.xml
<CustomField>
    <fullName>MNC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if the client linked to this case is a Multi National Client. This information is sourced from the Client_Operating_Countries__c Object . SFP-9498</description>
    <inlineHelpText>If true , the client linked to this case is a Multi National Client</inlineHelpText>
    <label>MNC</label>
    <type>Checkbox</type>
</CustomField>