force-app/main/default/objects/Case/fields/Name_Of_Sandbox_Used__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Sandbox_Used__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Name Of Sandbox Used</label>
    <length>15</length>
    <type>Text</type>
</CustomField>