force-app/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Details of any follow up actions that are required to be performed to improve a process or function</inlineHelpText>
    <label>Next Steps</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>