force-app/main/default/objects/Case/fields/Non_SBG_Case__c.field-meta.xml
<CustomField>
    <fullName>Non_SBG_Case__c</fullName>
    <formula>Contact.Non_SBG_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-SBG Case</label>
    <type>Checkbox</type>
</CustomField>