force-app/main/default/objects/Case/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <description>US-3669 This is an email alert indicator for open cases, each time an email is received on an open case, then the case owner is notified.</description>
    <inlineHelpText>This is an email alert indicator for open cases, each time an email is received on an open case, then the case owner is notified.</inlineHelpText>
    <label>Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unread Email</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>