force-app/main/default/objects/Case/fields/Notify_Contact__c.field-meta.xml
<CustomField>
    <fullName>Notify_Contact__c</fullName>
    <description>Manually control email notifications to contact.</description>
    <inlineHelpText>Select Yes to send email notification to the Contact against this Client when a case is created and again when closed. Select No if Client should not receive notifications for this case</inlineHelpText>
    <label>Notify Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>