force-app/main/default/objects/Case/fields/Number_of_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Requests__c</fullName>
    <defaultValue>1</defaultValue>
    <description>SFP-7967 - This field is used to record number of items requested by the client for this one case.</description>
    <inlineHelpText>Enter how many items requested by the client for this case.</inlineHelpText>
    <label>Number of Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>