force-app/main/default/objects/Case/fields/Objects_Impacted_choose_all_that_apply__c.field-meta.xml
<CustomField>
    <fullName>Objects_Impacted_choose_all_that_apply__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Objects Impacted (choose all that apply)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Legal Agreement</fullName>
            </value>
            <value>
                <fullName>KYC Requests &amp; Statuses</fullName>
            </value>
            <value>
                <fullName>Sales Credits</fullName>
            </value>
            <value>
                <fullName>Trade History</fullName>
            </value>
            <value>
                <fullName>CRT Report</fullName>
            </value>
            <value>
                <fullName>Cashflow</fullName>
            </value>
            <value>
                <fullName>Call Report</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>