force-app/main/default/objects/Case/fields/Other_CIB_Business_Units_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Other_CIB_Business_Units_Impacted__c</fullName>
    <label>Other CIB Business Units Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPS</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>