force-app/main/default/objects/Case/fields/Other_CIB_Global_Areas_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Other_CIB_Global_Areas_Impacted__c</fullName>
    <label>Other CIB Global Areas Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIBI</fullName>
            </value>
            <value>
                <fullName>CIBSA</fullName>
            </value>
            <value>
                <fullName>CIBROA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>