force-app/main/default/objects/Case/fields/Out_Of_SLA_Approved__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_SLA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sheldon Lazarus
            Ideas Inc: Field that shows Cases that have been approved to be out of SLA</description>
    <inlineHelpText>Case has been approved to be out of SLA</inlineHelpText>
    <label>Out Of SLA Approved</label>
    <type>Checkbox</type>
</CustomField>