force-app/main/default/objects/Case/fields/Outgoing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SGPRT-782 - Shows the number of  outgoing emails related to this Case.</description>
    <inlineHelpText>How many outgoing emails are related to this Case?</inlineHelpText>
    <label>Outgoing Emails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>