force-app/main/default/objects/Case/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <description>Parent Category of Product for which this case has been opened (US-1495).</description>
    <inlineHelpText>Parent Category of Product for which this case has been opened.</inlineHelpText>
    <label>Parent Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Applicable_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Parent_Product</valueSetName>
    </valueSet>
</CustomField>