force-app/main/default/objects/Case/fields/Planned_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Implementation_Date__c</fullName>
    <description>The expected implementation date of the change request.
            Rule: Mandatory when status is changed to &apos;Development&apos;

            CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <inlineHelpText>Mandatory when status is changed to &apos;Development&apos;</inlineHelpText>
    <label>Planned Implementation Date</label>
    <type>Date</type>
</CustomField>