force-app/main/default/objects/Case/fields/Primary_Relationship_Holder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Holder__c</fullName>
    <description>Relationship Holder SGPRT - 866 - This field displays the Primary Relationship Holder of the client linked to this case.</description>
    <formula>TEXT(Account.Primary_Relationship_Holder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field identifies the type of market segment that the client falls into.</inlineHelpText>
    <label>Primary Relationship Holder</label>
    <type>Text</type>
</CustomField>