force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Category of Product, based on the Parent Product, for which this case has been opened</description>
    <inlineHelpText>Category of Product, based on the Parent Product, for which this case has been opened</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>