force-app/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Metals</fullName>
            </value>
            <value>
                <fullName>Credit Derivatives</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>ETD Derivatives</fullName>
            </value>
            <value>
                <fullName>Exotics/Hybrids</fullName>
            </value>
            <value>
                <fullName>Interest Rate Derivatives</fullName>
            </value>
            <value>
                <fullName>Manual Payments (FTs)</fullName>
            </value>
            <value>
                <fullName>Precious Metals</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Structured Products</fullName>
            </value>
            <value>
                <fullName>Treasury (FX/MM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>