force-app/main/default/objects/Case/fields/Progress_Details__c.field-meta.xml
<CustomField>
    <fullName>Progress_Details__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Progress Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>