force-app/main/default/objects/Case/fields/Project_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Project_Focus_Area__c</fullName>
    <description>Is this a tactical or strategic change?

            CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Project Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>